fixed scrollbar

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,9 +1,14 @@
 .menu {
-  box-sizing: border-box;
-  height: 100vh;
   background-color: $color-grey;
-  padding: $header-top-padding 0;
-  overflow-y: auto;
+  z-index: 1;
+
+  &__content {
+    box-sizing: border-box;
+    height: 100vh;
+    padding: $header-top-padding 0;
+    
+    overflow-y: auto;
+  }
 
   &__actions {
     display: flex;
