--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,8 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   background-color: #1d1d1d;
-  
+  scrollbar-width: none;
+   
 
   &__body {
     margin: 0;
