--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -5,6 +5,7 @@
     width: 100%;
     max-height: 321px;
     overflow: hidden;
+    z-index: 0;
 
     &::after {
       content: "";
